# DevKit-AI

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
design/: 01-devkit-cli-improvements.md  02-template-agent-improvements.md  03-strategic-vision.md  04-workflow-experience-report.md  05-implementation-roadmap.md  README.md
plugins/spec-dev/.claude-plugin/: plugin.json
plugins/spec-dev/agents/: code-reviewer.md
plugins/spec-dev/commands/: commit-msg.md  implement-ticket.md  prd.md  refine-ticket.md
plugins/spec-dev/skills/simplify-code/: SKILL.md
src/devkit_cli/: __init__.py  agent_utils.py  cli.py  config.py  core.py  models.py  ui.py  utils.py
src/devkit_cli/templates/claude-code/agents/: prompt-engineer.md
src/devkit_cli/templates/claude-code/commands/: commit-msg.md  frontend-init.md  onboard.md  pull-merge-from-main.md  ultra-think.md
src/devkit_cli/templates/claude-code/hooks/: welcome-banner.sh
src/devkit_cli/templates/claude-code/skills/research-paper-deep-dive/: SKILL.md
src/devkit_cli/templates/claude-code/skills/research-paper-deep-dive/assets/: README.md  TEMPLATE_STARTER.html  WEB_PAGE_DESIGN_GUIDE.md
src/devkit_cli/templates/claude-code/skills/research-paper-deep-dive/references/: report_structure_template.md  verification_checklist.md
src/devkit_cli/templates/claude-code/skills/research-paper-deep-dive/scripts/: download_paper.sh
