[project]
name = "devkit-cli"
version = "0.2.0"
description = "Lightweight CLI tool to bootstrap AI coding agent templates for your projects"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "readchar>=4.0.0",
]

[project.scripts]
devkit = "devkit_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devkit_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
